--- a/ClientApp/src/app/agent-setup/agent-setup.component.html
+++ b/ClientApp/src/app/agent-setup/agent-setup.component.html
@@ -4,18 +4,22 @@
         <!-- first-row -->
         <div class="row" style="justify-content:space-evenly;">
             <div class="col-md-3">
+                <span class ="label label-default">Agent Number</span>
                 <input type="text" class="form-control mb-2" style="width: 100%;" 
                     placeholder="Primary Agent Number"> 
             </div>
             <div class="col-md-3">
+                <span class ="label label-default">Agent SubCount</span>
                 <input type="text" class="form-control mb-2" style="width: 100%;" 
                     placeholder="Agent SubCount">
             </div>
             <div class="col-md-3">
+                <span class ="label label-default">Commisson Splitup</span>
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
                     placeholder="Commisson Splitup">
             </div>
             <div class="col-md-3">
+                <span class ="label label-default">Agent Name</span>
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
                     placeholder="Agent Name">
             </div>
