--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -101,45 +101,6 @@
       </div>
     </div>
 
-    <!-- <div id="accordion">
-      <div class="card">
-        <div class="card-header">
-          <a class="card-link" style="float: right;" data-toggle="collapse" href="#collapseOne">
-          </a>
-        </div>
-        <div id="collapseOne" class="collapse" data-parent="#accordion">
-          <div class="card-body">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-header">
-          <a class="collapsed card-link" style="float: right;" data-toggle="collapse" href="#collapseTwo">
-          <mat-icon>add</mat-icon>
-        </a>
-        </div>
-        <div id="collapseTwo" class="collapse" data-parent="#accordion">
-          <div class="card-body">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-header">
-          <a class="collapsed card-link" style="float: right;" data-toggle="collapse" href="#collapseThree">
-            <mat-icon>add</mat-icon>
-          </a>
-        </div>
-        <div id="collapseThree" class="collapse" data-parent="#accordion">
-          <div class="card-body">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </div>
-        </div>
-      </div>
-    </div>
-    -->
-  
     <div class="container">
       <div id="accordion" class="accordion">
           <div class="card mt-2" style="cursor: pointer;">
@@ -177,7 +138,7 @@
                 <div class="card-body"><app-fpp-individual ></app-fpp-individual>
                 </div>
             </div>
-            <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+            <div class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
               <a class="card-title">
                 Employer Paid CI
               </a>
@@ -186,7 +147,7 @@
               <div class="card-body"><app-employer-paid-ci [lookupSitusState] = "lookupSitusStateValue"></app-employer-paid-ci>
               </div>
           </div>
-          <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
+          <div class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
             <a class="card-title">
               Voluntary CI
             </a>
@@ -195,7 +156,7 @@
             <div class="card-body"><app-voluntary-ci [lookupSitusState] = "lookupSitusStateValue"></app-voluntary-ci>
             </div>
         </div>
-        <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
+        <div class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
           <a class="card-title">
             Vol Group Life
           </a>
@@ -204,7 +165,7 @@
           <div class="card-body"><app-vol-group-life [lookupSitusState] = "lookupSitusStateValue"></app-vol-group-life>
           </div>
       </div>
-      <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
+      <div class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
         <a class="card-title">
           Basic Group Life
         </a>
