--- a/ClientApp/src/app/header/header.component.html
+++ b/ClientApp/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <tbody>
       <tr>
         <td>
-          <img src="https://5star-taa-staging.s3.amazonaws.com/static/img/5Star_TEST_logo_TAA.png">
+          <img src="assets/img/5star-logo.png">
         </td>
         <td>
           <h3 class="text-muted">Enrollment Pre-Processor
