--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -3,5 +3,5 @@
   <div class="container-fluid">
     <router-outlet></router-outlet>
   </div>
-  <app-footer [data]="datasource"></app-footer>
+  <app-footer ></app-footer>
 </body>
