--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -14,6 +14,33 @@
           <input type="text" class="form-control mb-2 " style="width: 100%;" 
                 placeholder="Agent Signature">
         </div>
+        <div class="col-3">
+       
+          <div class="container">
+                  <div class="row mt-8">
+          
+                    <table>
+                      <th style="padding: 4px; background: #2980b9; 
+                        background: -webkit-linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
+                        background: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);">
+                        Riders
+                      </th>
+                      <tr>
+                        <div>
+                          <mat-checkbox class="example-margin" [(ngModel)]="checked">QOL Rider</mat-checkbox>
+                        </div>
+                        <div>
+                          <mat-checkbox class="example-margin" [(ngModel)]="indeterminate">Waiver</mat-checkbox>
+                        </div>
+            
+            
+                      </tr>
+                    </table>
+                  </div>
+                  </div>
+          
+                </div>
+
         </div>
         
       </div>
@@ -31,12 +58,12 @@
                 placeholder="Employee GI Amount">
   </div>
   <div class="col-3">
-    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+    <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
               <input type="text" class="form-control mb-2 " style="width: 100%;" 
                 placeholder="Employee QI Amount Max">
   </div>
   <div class="col-3">
-    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+    <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
               <input type="text" class="form-control mb-2 " style="width: 100%;" 
                 placeholder="Employee Max Amount">
   </div>
@@ -53,12 +80,12 @@
                   ">
     </div>
     <div class="col-3">
-      <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+      <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
                   placeholder="Spouse QI Amount Max">
     </div>
     <div class="col-3">
-      <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+      <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
                   placeholder="Spouse Max Amount">
     </div>
@@ -73,12 +100,12 @@
                     placeholder="Child GI Amount Max">
       </div>
       <div class="col-3">
-        <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+        <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
                   <input type="text" class="form-control mb-2 " style="width: 100%;" 
                     placeholder="Child QI Amount Max">
       </div>
       <div class="col-3">
-        <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+        <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
                   <input type="text" class="form-control mb-2 " style="width: 100%;" 
                     placeholder="Child Max Amount">
       </div>
@@ -116,7 +143,7 @@
      </div>
   
     
-  <div class="container">
+  <!-- <div class="container">
      
         <div class="row mt-8">
   
@@ -140,6 +167,6 @@
         </div>
         <app-agent-setup></app-agent-setup>
       </div>
-  
+   -->
       
    
