--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -5,13 +5,15 @@
         <input type="date" [min] = "minDate" class="form-control mb-2 " style="width: 100%;" placeholder="Basic Life Effective Date">
       </div>
       <div class="col-3">
-        <span class="label">Basic Group Situs State</span>
-        <select class="form-control" [disabled] = "!lookupSitusState" id="inlineFormCustomSelectPref">
-          <option selected>{{ lookupSitusState }}</option>
+        <span class="label"> Situs State</span>
+        <select class="form-control" id="inlineFormCustomSelectPref">
+          <option hidden disabled selected value> -- select Situs State -- </option>
+        <option selected *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">{{ lookUpDataSitusState }}</option>
+          
         </select>
-        <div *ngIf="lookupSitusState == ''">
+        <!-- <div *ngIf="lookupSitusState == ''">
           <span style="color: red;">  <small><strong>Select Situs State!</strong></small></span>
-        </div>
+        </div> -->
       </div>
     </div>
 
