--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -10,12 +10,13 @@
     <div class="col-3">
       <span class="label label-default"> Employer Paid Ci Situs
         State</span>
-      <select class="form-control" [disabled] = "!lookupSitusState" id="inlineFormCustomSelectPref">
-        <option selected>{{ lookupSitusState }}</option>
+      <select class="form-control"  id="inlineFormCustomSelectPref">
+        <option hidden disabled selected value> -- select Situs State -- </option>
+        <option selected *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">{{ lookUpDataSitusState }}</option>
       </select>
-      <div *ngIf="lookupSitusState == ''">
+      <!-- <div *ngIf="lookupSitusState == ''">
         <span style="color: red;">  <small><strong>Select Situs State!</strong></small></span>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
@@ -29,7 +30,7 @@
                       ">
   </div>
   <div class="col-3">
-    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+   
     <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee Standard Face
                       Amount">
   </div>
