--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -10,14 +10,45 @@
         </div>
      
       <div class="col-3">
-        <span class ="label label-default">Group Payment Mode</span>
-        <select class="form-control" [disabled]="!lookupValue" id="inlineFormCustomSelectPref">
-          <option selected>{{lookupValue}}</option>
+        <span class ="label label-default">Sitius State</span>
+        <select class="form-control" id="inlineFormCustomSelectPref">
+          <option hidden disabled selected value> -- select Situs State -- </option>
+          <option selected *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">{{lookUpDataSitusState}}</option>
         </select>
-        <div *ngIf="lookupValue == ''">
+        <!-- <div *ngIf="lookupValue == ''">
           <span style="color: red;">  <small><strong>Select Payment Mode !</strong></small></span>
-        </div>
+        </div> -->
       </div>
+
+      <div class="col-3">
+       
+<div class="container">
+        <div class="row mt-8">
+
+          <table>
+            <th style="padding: 4px; background: #2980b9; 
+              background: -webkit-linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
+              background: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);">
+              Riders
+            </th>
+            <tr>
+              <div>
+                <mat-checkbox class="example-margin" [(ngModel)]="checked">QOL Rider</mat-checkbox>
+              </div>
+              <div>
+                <mat-checkbox class="example-margin" [(ngModel)]="indeterminate">Waiver</mat-checkbox>
+              </div>
+  
+  
+            </tr>
+          </table>
+        </div>
+        </div>
+
+      </div>
+
+
+
       </div>
       
     </div>
@@ -35,12 +66,12 @@
               placeholder="Employee GI Amount Max">
 </div>
 <div class="col-3">
-  <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+  <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
             <input type="text" class="form-control mb-2 " style="width: 100%;" 
               placeholder="Employee QI Amount Max">
 </div>
 <div class="col-3">
-  <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+  <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
             <input type="text" class="form-control mb-2 " style="width: 100%;" 
               placeholder="Employee Max Amount">
 </div>
@@ -57,12 +88,12 @@
                 ">
   </div>
   <div class="col-3">
-    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+    <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
               <input type="text" class="form-control mb-2 " style="width: 100%;" 
                 placeholder="Spouse QI Amount Max">
   </div>
   <div class="col-3">
-    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+    <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
               <input type="text" class="form-control mb-2 " style="width: 100%;" 
                 placeholder="Spouse Max Amount">
   </div>
@@ -77,12 +108,12 @@
                   placeholder="Child GI Amount Max">
     </div>
     <div class="col-3">
-      <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+      <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
                   placeholder="Child QI Amount Max">
     </div>
     <div class="col-3">
-      <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+      <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
                   placeholder="Child Max Amount">
     </div>
@@ -97,8 +128,7 @@
         <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
         
                   <input type="text" class="form-control mb-2 " style="width: 100%;" 
-                    placeholder="Open Enrollment GI
-                    ">
+                    placeholder="Open Enrollment GI">
       </div>
      
       
@@ -107,7 +137,7 @@
    </div>
 
   
-<div class="container">
+<!-- <div class="container">
    
       <div class="row mt-8">
 
@@ -129,7 +159,7 @@
           </tr>
         </table>
       </div>
-    </div>
+    </div> -->
 
     <app-agent-setup></app-agent-setup>
  
