--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -7,12 +7,13 @@
         </div>
         <div class="col-3">
             <span class="label">Voluntary CI Situs State</span>
-            <select class="form-control" [disabled]="!lookupSitusState" id="inlineFormCustomSelectPref">
-                <option selected>{{ lookupSitusState }}</option>
+            <select class="form-control" id="inlineFormCustomSelectPref">
+                <option hidden disabled selected value> -- select Situs State -- </option>
+        <option selected *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">{{ lookUpDataSitusState }}</option>
             </select>
-            <div *ngIf="lookupSitusState == ''">
+            <!-- <div *ngIf="lookupSitusState == ''">
                 <span style="color: red;"> <small><strong>Select Situs State!</strong></small></span>
-            </div>
+            </div> -->
         </div>
         <div class="col-3">
             <span class="label label-default">Plan Code</span>
@@ -25,7 +26,7 @@
             <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee GI Amount">
         </div>
         <div class="col-3">
-            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
             <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee Max Amount">
         </div>
         <div class="col-3">
@@ -46,7 +47,7 @@
             <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse GI Amount">
         </div>
         <div class="col-3">
-            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
             <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse Max Amount">
         </div>
     </div>
@@ -56,7 +57,7 @@
             <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child GI Amount">
         </div>
         <div class="col-3">
-            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
             <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child Max Amount">
         </div>
     </div>
