update occ class

--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -56,7 +56,23 @@
           <span class ="label label-default">Occupation Class</span>
           <select class="select-dropdown my-1 " >
             <option selected>Select Occupation Class</option>
-            <option value="1">Occ Class</option>
+            <!-- <option value="1">Occ Class</option> -->
+            <option value="2">1</option>
+            <option value="3">2</option>
+            <option value="4">3</option>
+            <option value="5">4</option>
+            <option value="6">5</option>
+            <option value="7">6</option>
+            <option value="8">7</option>
+            <option value="9">8</option>
+            <option value="10">9</option>
+            <option value="11">10</option>
+            <option value="12">11</option>
+            <option value="13">12</option>
+            <option value="14">13</option>
+            <option value="15">14</option>
+            <option value="16">15</option>
+           
           </select>
         </div>
        
