new changes deploy

--- a/ClientApp/src/app/agent-setup/agent-setup.component.html
+++ b/ClientApp/src/app/agent-setup/agent-setup.component.html
@@ -14,18 +14,23 @@
                     placeholder="Agent SubCount">
             </div>
             <div class="col-md-3">
-                <span class ="label label-default">Commisson Splitup</span>
+                <span class ="label label-default">Commisson Split</span>
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
-                    placeholder="Commisson Splitup">
+                    placeholder="Commisson Split">
             </div>
+
             <div class="col-md-3">
                 <span class ="label label-default">Agent Name</span>
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
                     placeholder="Agent Name">
             </div>
+          
         </div>
+       
+        
+       
         <!-- second-row -->
-        <div class="row" style="justify-content:space-evenly;">
+        <div class="row">
             <div class="col-md-3">
                 <input type="text" class="form-control mb-2" style="width: 100%;" 
                     placeholder="Agent Number">
@@ -36,15 +41,15 @@
             </div>
             <div class="col-md-3">
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
-                    placeholder="Commisson Splitup">
+                    placeholder="Commisson Split">
             </div>
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
                     placeholder="Agent Name">
-            </div>
+            </div> -->
         </div>
         <!-- 3rd-row -->
-        <div class="row" style="justify-content:space-evenly;">
+        <div class="row" >
             <div class="col-md-3">
                 <input type="text" class="form-control mb-2" style="width: 100%;" 
                     placeholder="Agent Number">
@@ -55,15 +60,15 @@
             </div>
             <div class="col-md-3">
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
-                    placeholder="Commisson Splitup">
+                    placeholder="Commisson Split">
             </div>
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
                     placeholder="Agent Name">
-            </div>
+            </div> -->
         </div>
         <!-- 4th-row -->
-        <div class="row" style="justify-content:space-evenly;">
+        <div class="row" >
             <div class="col-md-3">
                 <input type="text" class="form-control mb-2" style="width: 100%;" 
                     placeholder="Agent Number">
@@ -74,12 +79,12 @@
             </div>
             <div class="col-md-3">
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
-                    placeholder="Commisson Splitup">
+                    placeholder="Commisson Split">
             </div>
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
                 <input type="text" class="form-control mb-2 " style="width: 100%;" 
                     placeholder="Agent Name">
-            </div>
+            </div> -->
         </div>
     </form>
 </div>
