--- a/ClientApp/src/app/group-search/group-search.component.html
+++ b/ClientApp/src/app/group-search/group-search.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
 <form class="group-search-section" *ngIf="groupSearchSection">
-    <h3>Group Search Screen</h3>
+    <h3>Group Search</h3>
     <div class="row" style="margin-top: 5%;">
         <div class="col-md-4 form-group">
             <label for="selectGrp">Select by Group Name/Number</label>
