--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -19,6 +19,9 @@
                 <span style="color: red;">  <small><strong>Select Situs State!</strong></small></span>
               </div> -->
             </div>
+            <div class="col">
+              <app-radio-button></app-radio-button>
+            </div>
         </div>
   
         <app-agent-setup></app-agent-setup>
