--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -19,6 +19,9 @@
             <span class="label label-default">Plan Code</span>
             <input type="text" [min]="minDate" class="form-control mb-2 " style="width: 100%;" placeholder="Plan Code">
         </div>
+        <div class="col">
+            <app-radio-button></app-radio-button>
+        </div>
     </div>
     <div class="row">
         <div class="col-3">
