--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -25,6 +25,10 @@
       </select>
     
     </div>
+    <div class="col-3">
+      <app-radio-button></app-radio-button>  
+    </div>
+    
   </div>
 </div>
 <div class="container">
