--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -4,7 +4,6 @@
       <span class="label label-default">Date</span>
       <input type="date" [min]="minDate" class="form-control mb-2 " style="width: 100%;" placeholder="Employer Paid CI Effective
           Date">
-
     </div>
 
     <div class="col-3">
@@ -18,12 +17,23 @@
         <span style="color: red;">  <small><strong>Select Situs State!</strong></small></span>
       </div> -->
     </div>
+   
+      <div class="col-3">
+        <input type="text" class="form-control mb-2" style="width: 100% ;margin-top: 23px;" 
+        placeholder="Plan Code">
+       
+        </div>
+        <div class="col-3" style="margin-top: 18px;">
+          <app-radio-button></app-radio-button>  
+        </div>
+      
   </div>
+  
 </div>
 <div class="row" style="margin-left: 1px;">
 
   <div class="col-3">
-    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+    <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
 
     <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse Standard Face
                       Amount
