--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -15,9 +15,12 @@
                 <span style="color: red;"> <small><strong> Situs State!</strong></small></span>
             </div> -->
         </div>
+        <div class="col">
+            <app-radio-button></app-radio-button>
+        </div>
     </div>
     <div class="row">
-        <div class="col-3">
+        <div class="col-3 mb-2">
             <span class="label">AD&D Rider </span>
             <select class="form-control">
                 <option selected value="Y">Y</option>
