--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -4,55 +4,66 @@
     <div class="row" style="justify-content: flex-end;">
       <button class="btn btn-secondary" type="submit">Reset Form </button>
     </div>
-    <div class="row">
-      <app-radio-button></app-radio-button>
-      <div class="col-3">
-        <span class="label label-default">Effective Date</span>
-        <input type="date" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
-          placeholder="Group Effective Date">
-
-      </div>
-      <app-radio-button></app-radio-button>
-      <div class="col-3">
-        <span class="label label-default">Sitius State</span>
-        <select class="form-control">
-          <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
-          <option [value]="lookupValue" *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
-            {{lookUpDataSitusState.state}}</option>
-
-        </select>
-        <!-- <div *ngIf="lookupValue == ''">
-      <span style="color: red;">  <small><strong>Select Payment Mode !</strong></small></span>
-    </div> -->
-      </div>
-
-      <div class="container pt-4 pb-4">
-        <div class="row">
-          <h6 style="padding: 4px;">
-            Riders
-          </h6>
+    <div style=" margin-left: 15px;" >
+      <div class="row">
+        <app-radio-button></app-radio-button>
+        <div class="col-3">
+          <span class="label label-default">Effective Date</span>
+          <input type="date" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
+            placeholder="Group Effective Date">
+  
         </div>
-        <div class="row mt-8">
-          <div class="col">
-            <mat-checkbox class="example-margin" [(ngModel)]="checked" name="Qol">QOL Rider</mat-checkbox>
-            <app-radio-button></app-radio-button>
+        <app-radio-button></app-radio-button>
+        <div class="col-3">
+          <span class="label label-default">Sitius State</span>
+          <select class="form-control">
+            <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
+            <option [value]="lookupValue" *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
+              {{lookUpDataSitusState.state}}</option>
+  
+          </select>
+          <!-- <div *ngIf="lookupValue == ''">
+        <span style="color: red;">  <small><strong>Select Payment Mode !</strong></small></span>
+      </div> -->
+        </div>
+  </div>
+        <div class="container pt-4 pb-4">
+          <div class="row">
+            <h6 style="padding: 4px;">
+              Riders
+            </h6>
           </div>
-
-          <div class="col">
-            <mat-checkbox class="example-margin" [(ngModel)]="indeterminate" name="Waiver">Waiver</mat-checkbox>
-            <app-radio-button></app-radio-button>
+          <div class="row mt-8">
+            <div class="col-md-6">
+              <div class="row">
+                <div class="col">
+                  <app-radio-button></app-radio-button> 
+                </div>
+                <div class="col" style="justify-content:flex-start;">
+                  <mat-checkbox class="example-margin" [(ngModel)]="checked" name="Qol">QOL Rider</mat-checkbox>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+            <div class="row">
+              <div class="col">
+                <app-radio-button></app-radio-button>
+              </div>
+              <div class="col">
+                <mat-checkbox class="example-margin" [(ngModel)]="indeterminate" name="Waiver">Waiver</mat-checkbox>
+              </div>
+            </div>
+            </div>
+            
+            
           </div>
         </div>
-      </div>
-
-   
-      <app-radio-button></app-radio-button>
-      <div class="col-3" style="margin-top: 15px;">
+  
+     
        
-        <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
-      </div>
-    
-     </div>
+     
+    </div>
+ 
 
 
 
@@ -132,10 +143,16 @@
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Open Enrollment GI">
         </div>
 
-
       </div>
-
+      <div class="row mt-2">
+        <app-radio-button></app-radio-button>
+      <div class="col-3" style="margin-top: 15px;">
+      
+        <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
+      </div>
+      </div>
     </div>
   </form>
-
+<div class="row mt-2">
   <app-agent-setup></app-agent-setup>
+</div>
