--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -1,81 +1,42 @@
 <div class="container" style="width: 100%;">
 
   <form>
-    <div class="row" style="justify-content: flex-end;">
-      <button class="btn btn-secondary" type="submit">Reset Form </button>
-    </div>
-    <div style=" margin-left: 15px;" >
+    <div style=" margin-left: 15px;">
       <div class="row">
         <app-radio-button></app-radio-button>
         <div class="col-3">
-          <span class="label label-default">Effective Date</span>
-          <input type="date" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
+          <span class="label label-default">Group Effective Date</span>
+          <input type="date" [value]="dateValue" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
             placeholder="Group Effective Date">
-  
+
         </div>
         <app-radio-button></app-radio-button>
         <div class="col-3">
           <span class="label label-default">Sitius State</span>
-          <select class="form-control">
+          <select class="form-control" [value]="lookupValue">
             <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
-            <option [value]="lookupValue" *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
+            <option  *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
               {{lookUpDataSitusState.state}}</option>
-  
+
           </select>
           <!-- <div *ngIf="lookupValue == ''">
         <span style="color: red;">  <small><strong>Select Payment Mode !</strong></small></span>
       </div> -->
         </div>
-  </div>
-        <div class="container pt-4 pb-4">
-          <div class="row">
-            <h6 style="padding: 4px;">
-              Riders
-            </h6>
-          </div>
-          <div class="row mt-8">
-            <div class="col-md-6">
-              <div class="row">
-                <div class="col">
-                  <app-radio-button></app-radio-button> 
-                </div>
-                <div class="col" style="justify-content:flex-start;">
-                  <mat-checkbox class="example-margin" [(ngModel)]="checked" name="Qol">QOL Rider</mat-checkbox>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-            <div class="row">
-              <div class="col">
-                <app-radio-button></app-radio-button>
-              </div>
-              <div class="col">
-                <mat-checkbox class="example-margin" [(ngModel)]="indeterminate" name="Waiver">Waiver</mat-checkbox>
-              </div>
-            </div>
-            </div>
-            
-            
-          </div>
+        <div class="col-3 mt-4">
+          <button class="btn btn-primary" type="submit">Reset Form </button>
         </div>
-  
-     
-       
-     
+      </div>
     </div>
- 
-
-
-
 
     <div class="container">
-      
+
       <div class="row" style="margin-top: 10px;">
-        
+
         <app-radio-button></app-radio-button>
         <div class="col-3">
 
-          <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
+          <span class="label label-default">Employee GI Amount Max</span>
 
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee GI Amount Max">
         </div>
@@ -83,34 +44,31 @@
 
 
         <div class="col-3">
-          <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
+          <span class="label label-default">Employee QI Amount Max</span>
 
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee QI Amount Max">
         </div>
         <div class="col-3">
-          <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
+          <span class="label label-default">Employee Max Amount</span>
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee Max Amount">
         </div>
-        <!-- <div class="col-3">
-<app-radio-button></app-radio-button>  
-</div> -->
-
+      
       </div>
 
       <div class="row mt-2">
         <app-radio-button></app-radio-button>
         <div class="col-3">
-          <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
+          <span class="label label-default">Spouse GI Amount Max</span>
 
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse GI Amount Max
             ">
         </div>
         <div class="col-3">
-          <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
+          <span class="label label-default">Spouse QI Amount Max</span>
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse QI Amount Max">
         </div>
         <div class="col-3">
-          <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
+          <span class="label label-default">Spouse Max Amount</span>
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse Max Amount">
         </div>
 
@@ -118,16 +76,16 @@
       <div class="row mt-2">
         <app-radio-button></app-radio-button>
         <div class="col-3">
-          <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
+          <span class="label label-default">Child GI Amount Max</span>
 
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child GI Amount Max">
         </div>
         <div class="col-3">
-          <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
+          <span class="label label-default">Child QI Amount Max</span>
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child QI Amount Max">
         </div>
         <div class="col-3">
-          <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
+          <span class="label label-default">Child Max Amount</span>
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child Max Amount">
         </div>
 
@@ -138,21 +96,55 @@
       <div class="row mt-2">
         <app-radio-button></app-radio-button>
         <div class="col-3">
-          <!-- <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked> -->
 
+          <span class="label label-default">Open Enrollment GI</span>
           <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Open Enrollment GI">
         </div>
 
+        <app-radio-button></app-radio-button>
+        <div class="col-3">
+          <span class="label label-default">Plan code manual Entry</span>
+          <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
+        </div>
+
+      </div>
+
+      <div class="row pt-2">
+        <h6>
+          Riders
+        </h6>
       </div>
       <div class="row mt-2">
-        <app-radio-button></app-radio-button>
-      <div class="col-3" style="margin-top: 15px;">
-      
-        <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col" style="margin-left: -16px;">
+              <app-radio-button></app-radio-button>
+            </div>
+            <div class="col" style="justify-content:flex-start;margin-right: 170px;
+            margin-top: 24px;">
+              <mat-checkbox class="example-margin" [(ngModel)]="checked" name="Qol">QOL Rider</mat-checkbox>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col" style="margin-left: -147px;">
+              <app-radio-button></app-radio-button>
+            </div>
+            <div class="col" style="margin-right: 170px;
+          margin-top: 24px;">
+              <mat-checkbox class="example-margin" [(ngModel)]="indeterminate" name="Waiver">Waiver</mat-checkbox>
+            </div>
+          </div>
+        </div>
+
       </div>
-      </div>
+
+
     </div>
+    <div class="mt-4">
+      <app-agent-setup></app-agent-setup>
+    </div>
+
   </form>
-<div class="row mt-2">
-  <app-agent-setup></app-agent-setup>
-</div>
+  </div>
