--- a/ClientApp/src/app/radio-button/radio-button.component.html
+++ b/ClientApp/src/app/radio-button/radio-button.component.html
@@ -1,21 +1,21 @@
 
 <div class="form-check">
-    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option1" checked>
-    <label class="form-check-label" for="exampleRadios1">
+    <input class="form-check-input" type="radio" value="option1" checked>
+    <label class="form-check-label" >
         100% override
     </label> 
 </div>
 <div class="form-check">
  
-    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-    <label class="form-check-label" for="exampleRadios2">
+    <input class="form-check-input" type="radio"  value="option2">
+    <label class="form-check-label" >
         Partial update
     </label>
 </div>
 
 <div class="form-check">
-    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-    <label class="form-check-label" for="exampleRadios2">
+    <input class="form-check-input" type="radio"  value="option2">
+    <label class="form-check-label" >
         Validate
     </label>
   </div>
